--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,6 @@
     },
     "scripts": {
         "start": "php -S localhost:8080 -t public",
-        "test": "phpunit"
+        "test": "phpunit  --coverage-text"
     }
 }
