--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "require": {
         "php": "^8.0",
         "ext-json": "*",
+        "league/event": "^3.0",
         "monolog/monolog": "^2.0",
         "php-di/php-di": "^6.3",
         "ramsey/uuid": "^4.1",
