--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     },
     "require-dev": {
         "phpspec/prophecy-phpunit": "^2.0",
+        "phpstan/phpstan": "^0.12.64",
         "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-master",
         "squizlabs/php_codesniffer": "^3.5"
@@ -33,6 +34,13 @@
     },
     "scripts": {
         "start": "php -S localhost:8080 -t public",
-        "test": "phpunit  --coverage-text"
+        "test": [
+            "@phpunit",
+            "@phpcs",
+            "@phpstan"
+        ],
+        "phpunit": "phpunit  --coverage-text",
+        "phpcs": "phpcs",
+        "phpstan": "phpstan analyse src/ --memory-limit=-1"
     }
 }
